ip order  list and detail
