# src/ip-library/ip-order/ip-order.controller.ts
@@ -1,11 +1,12 @@
-import { Controller, HttpCode, HttpStatus, Post, Req, Body, UseGuards, Headers } from "@nestjs/common"
+import { Controller, HttpCode, HttpStatus, Post, Req, Body, UseGuards, Headers, Get, Param } from "@nestjs/common"
 import { AuthGuard } from "@nestjs/passport"
 import { UserInfoDTO } from "src/user/user.controller"
-import { CreateIpDto, CreateIpOrderDto } from "../ip-library.dto"
+import { CreateIpOrderDto } from "../ip-library.dto"
 import { ApiBody, ApiExcludeEndpoint, ApiOperation, ApiResponse, ApiTags } from "@nestjs/swagger"
 import { IpOrderService } from "./ip-order.service"
 import { OrderDetailDto } from "src/payment/order/order.dto"
 import { Request } from "express"
+import { CheckIpOrderDto, CheckIpOrderListDto } from "./ip-order.dto"
 
 @ApiTags("IP Order")
 @Controller("/api/v1/ip/order")
@@ -29,5 +30,27 @@ export class IpOrderController {
     @HttpCode(HttpStatus.OK)
     async orderCallback(@Body() body: OrderDetailDto) {
         return await this.ipOrderService.orderCallback(body)
+    }
+
+    @Get("/")
+    @HttpCode(HttpStatus.OK)
+    @UseGuards(AuthGuard("jwt"))
+    @ApiOperation({
+        summary: "Get ip order list",
+    })
+    @ApiResponse({ type: CheckIpOrderListDto })
+    async getIpOrderList(@Req() req: Request, @Headers("app-id") app_id: string) {
+        return await this.ipOrderService.getIpOrderList(req.user as UserInfoDTO, app_id)
+    }
+
+    @Get("/:order_id")
+    @HttpCode(HttpStatus.OK)
+    @UseGuards(AuthGuard("jwt"))
+    @ApiOperation({
+        summary: "Check ip order",
+    })
+    @ApiResponse({ type: CheckIpOrderDto })
+    async checkIpOrder(@Param("order_id") order_id: string, @Req() req: Request) {
+        return await this.ipOrderService.ipOrderDetail(order_id, req.user as UserInfoDTO)
     }
 }
